# zed-rules-sync

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  upstream-check.yml
nix/: hm-module.nix
src/: db.rs  main.rs  types.rs
